[project]
name = "network-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gudhi>=3.12.0",
    "matilda",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "pandas>=3.0.2",
    "tqdm>=4.67.3",
]

[tool.uv.workspace]
members = [
    "workspaces/external_python_packages/*",
    "workspaces/tda_analysis",
]

[tool.uv.sources]
matilda = { workspace = true, editable = true }



