[project]
name = "network_lab_tda"
version = "0.1.0"
description = "A toolkit for tda network analysis"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gudhi>=3.12.0",
    "matilda",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "pandas>=3.0.2",
    "pyvis>=0.3.2",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
matilda = { path = "external_packages/matilda", editable = true }

[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"
